# PSI-Library

./: .Rbuildignore  .Rhistory  .gitignore  DESCRIPTION  Dockerfile  NAMESPACE  README.md  dp-schema.json  dpshema.json  experiment_with_sampleandaggregate.R  schemadp-example.json  snapping_requirements.txt  status
R/: DP-cdf.R  DP-covariance.R  DP-glm.R  DP-heavyhitters.R  DP-histogram.R  DP-logit.R  DP-mean.R  DP-poisson.R  DP-quantiles.R  DP-tree.R  DP-variance.R  createJSON.R  datasets.R  dp-regression.R  ellen_param_combos.csv  functions-unbiasedprivacy.R  mechanism-bootstrap.R  mechanism-exponential.R  mechanism-gaussian.R  mechanism-generalized-laplace.R  mechanism-laplace.R  mechanism-objective.R  mechanism-optimize.R  mechanism-sampleandaggregate.R  mechanism-snapping.R  mechanism-stability.R  mechanism.R  mechanisms.R  runSim.R  sim_61851.Rdata  statistic-covariance.R  statistic-glm.R  statistic-heavyhitters.R  statistic-histogram.R  statistic-mean.R  statistic-sampleandaggregate.R  statistic-tree.R  statistic-unbiasedprivacy.R  statistic-variance.R  statistics.R  (+18 more)
data/: PUMS5extract10000.RData  SocrataWhiteHouseEmployeeSalaries.RData  SocrataWhiteHouseSalaries.RData
dpfc/: CMakeLists.txt  README.md  configure.sh
dpfc/demos/: d_benchmark.cpp  d_string.cpp
dpfc/include/: dpfc.hpp
dpfc/include/dpfc/: count.hpp  hist_compact.hpp  hist_simple.hpp  hist_sparse.hpp  utils.hpp
dpfc/src/: count.cpp  hist_compact.cpp  hist_sparse.cpp  utils.cpp
dpfc/test/: t_count.cpp  t_hist_compact.cpp  t_hist_simple.cpp  t_hist_sparse.cpp  t_utils.cpp
extra_docs/: variance_sensitivity.tex
man/: GenLaplace-class.Rd  Laplace-Mechanism.Rd  LaplaceMechanism.Rd  Node-class.Rd  PSIlence-package.Rd  PUMS5extract10000.Rd  Snapping-Mechanism.Rd  Stability-Mechanism.Rd  addChild.Rd  addItem.Rd  addItems.Rd  adjacentElements.Rd  amsweep.Rd  binData.Rd  binDataPoint.Rd  binary.tree.Rd  binaryTree.Rd  boot.hist.Rd  boot.mean.Rd  bootHist.Rd  (+253 more)
(+54 files in other folders)
